--- a/src/css/components/old-layout.scss
+++ b/src/css/components/old-layout.scss
@@ -25,6 +25,7 @@
 .span-9 {
     float: left;
     margin-right: 10px;
+    max-width: 100%;
 }
 .last {
     margin-right: 0;
