--- a/src/css/components/table.scss
+++ b/src/css/components/table.scss
@@ -1,6 +1,9 @@
 table {
     margin-bottom: 1.4em;
     width: 100%;
+    max-width: 100%;
+    overflow: scroll;
+    display: block;
 }
 th {
     font-weight: bold;
